IE11 fix for input and submit alignment by unsetting line-height, remove media query from table links so they wrap in all cases

--- a/html/sites/all/themes/custom/ocha_basic/sass/pocam-custom/_main-content.scss
+++ b/html/sites/all/themes/custom/ocha_basic/sass/pocam-custom/_main-content.scss
@@ -46,9 +46,6 @@ h1.page__title,
   th,
   td {
     padding: 10px;
-    @include desktop {
-      white-space: nowrap;
-    }
 
     &:first-child {
       white-space: normal;
